test/tests/InterfaceMissingImplementation.expected
InterfaceMissingImplementation.frost:12:1: error: class 'anonymous.Sub' does not implement interface method anonymous.Foo.foo()
1 error
